--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,16 +1,50 @@
-.cover {
-	margin: 92px auto 0;
-	max-width: 1184px;
+.cover__overlay {
+	padding: 245px 0;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background: #2A2C2F;
+	background-image: url(../../../images/background.jpg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	object-fit: cover;
+	text-decoration: none;
 }
 
-@media screen and (max-width: 1023px) {
-	.cover {
-		margin-top: 90px;
+.cover__overlay:after {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	content: "";
+	background: rgba(42, 44, 47, 0.3);
+}
+
+.cover__overlay:hover:after {
+	cursor: pointer;
+	background: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (max-width: 1279px) {
+	.cover__overlay {
+		padding: 195px 0;
 	}
 }
 
-@media screen and (max-width: 767px) {
-	.cover {
-		margin-top: 66px;
+@media screen and (max-width: 1023px) {
+	.cover__overlay {
+		padding: 115px 0;
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.cover__overlay {
+		padding: 33px 0;
 	}
 }
