--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
 .place__link {
-	padding-top: 12px;
+	margin-top: 12px;
 	font-family: 'Inter', Arial, sans-serif;
 	font-weight: normal;
 	font-size: 18px;
@@ -9,7 +9,6 @@
 }
 
 .place__link:hover {
-	padding: 0;
 	opacity: 0.8;
 	cursor: pointer;
 }
