--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
 	margin: 28px auto 0;
 	width: calc(100vw - 96px);
 	max-width: 1184px;
-	min-width: 288px;
+	/*min-width: 288px;*/
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
@@ -21,3 +21,8 @@
 		width: calc(100vw - 32px);
 	}
 }
+
+
+
+
+
