--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,7 +2,8 @@
 	margin-top: 92px;
 	padding-left: 148px;
 	max-width: 690px;
-	min-width: 288px;
+	/*min-width: 288px;*/
+
 }
 
 @media screen and (max-width: 1279px) {
