--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
 	padding-top: 8px;
-	min-width: 158px;
+	/*min-width: 158px;*/
 	font-family: 'Inter', Arial, sans-serif;
 	color: #ffffff;
 	font-weight: normal;
@@ -21,6 +21,6 @@
 @media screen and (max-width: 767px) {
 	.lead__caption {
 		padding: 8px 16px;
-		width: 100vw;
+		/*width: 100vw;*/
 	}
 }
