--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,7 @@
 	padding-top: 32px;
 	width: 100%;
 	max-width: 640px;
-	min-width: 288px;
+	/*min-width: 288px;*/
 	font-family: 'Inter', Arial, sans-serif;
 	font-weight: normal;
 	font-size: 30px;
