--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
 	margin: 0 auto;
 	width: 100%;
 	max-width: 720px;
-	/*min-width: 288px;*/
+	width: 100%;
 	font-family: 'Inter', Arial, sans-serif;
 	font-weight: 900;
 	font-size: 96px;
